--- a/AChardware/nbproject/project.properties
+++ b/AChardware/nbproject/project.properties
@@ -33,11 +33,13 @@ dist.javadoc.dir=${dist.dir}/javadoc
 dist.jlink.dir=${dist.dir}/jlink
 dist.jlink.output=${dist.jlink.dir}/AChardware
 excludes=
+file.reference.AbsoluteLayout.jar=C:\\Program Files\\NetBeans-15\\netbeans\\java\\modules\\ext\\AbsoluteLayout.jar
 file.reference.mysql-connector-java-5.1.48.jar=D:\\Files\\POS system\\New folder\\jar_files\\mysql-connector-java-5.1.48.jar
 includes=**
 jar.compress=false
 javac.classpath=\
-    ${file.reference.mysql-connector-java-5.1.48.jar}
+    ${file.reference.mysql-connector-java-5.1.48.jar}:\
+    ${file.reference.AbsoluteLayout.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
@@ -73,7 +75,7 @@ jlink.additionalmodules=
 jlink.additionalparam=
 jlink.launcher=true
 jlink.launcher.name=AChardware
-main.class=achardware.AChardware
+main.class=Forms.Progress
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
